# gg-diagram

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  compare_trips.py  from_csv.py
gg_diagram/: __init__.py  compare.py  compute.py  io.py  plot.py
